update link name

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <ul class="site-menu js-clone-nav mx-auto d-none d-lg-block">
                 <li><a href="#section-home" class="nav-link">Inicio</a></li>
                 <li><a href="#section-about" class="nav-link">Sobre nosotros</a></li>
-                <li><a href="#section-our-team" class="nav-link">Nuestro Equipo</a></li>
+                <li><a href="#section-our-team" class="nav-link">Equipo</a></li>
                 <li><a href="#section-services" class="nav-link">Reglamento</a></li>
               </ul>
             </nav>
